# todo_list

./: .cursorrules  .gitignore  Dockerfile  README.md  check_cuda.py  check_train.py  create_test.py  docker-compose.yaml  pyproject.toml  run_triton.bat  setup.py  setup_triton.py  triton.Dockerfile
model_repository/text_normalization/: README.md  config.pbtxt
model_repository/text_normalization/1/: config.json  generation_config.json
model_repository/text_normalization_decoder/: config.pbtxt
model_repository/text_normalization_encoder/: config.pbtxt
model_repository/text_normalization_encoder/1/: tokenizer_config.json
src/tsu_nlp/model/: export_model.py  logger.py  model.py
